--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.6",
+    "@nestjs/microservices": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-core": "^3.11.1",
     "dotenv": "^16.0.3",
+    "graphql-subscriptions": "^2.0.0",
+    "nestjs-pg-notify": "^1.0.13",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
