--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-core": "^3.11.1",
+    "apollo-server-express": "^3.11.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "graphql-subscriptions": "^2.0.0",
     "nestjs-pg-notify": "^1.0.13",
