--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      
+
 jobs:
   package:
     runs-on: ubuntu-latest
@@ -12,19 +12,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Prepare Node 16
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
+      # - name: Prepare Node 16
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      # - name: Install dependencies
+      #   run: npm install --legacy-peer-deps
 
-      - name: Install Nest
-        run: npm i -g @nestjs/cli
+      # - name: Install Nest
+      #   run: npm i -g @nestjs/cli
 
-      - name: Build
-        run: nest build 
+      # - name: Build
+      #   run: nest build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -47,7 +47,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: etenlab/notifications-api
-      
+
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
